--- a/next-app/package.json
+++ b/next-app/package.json
@@ -13,10 +13,12 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
     "@types/node": "20.12.7",
     "@types/react": "18.2.74",
+    "autoprefixer": "^10.4.21",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.5.6",
     "typescript": "5.4.2"
   }
 }
